--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <h1 class="text-primary text-info">About Me</h1>
         <div class="p-3 border border-dark mb-4">
-            <p>I am currently an Advanced Emergency Medical Technician working every day to make a difference. I want to pursuing other challanges and that is why I am seaking career in Information Technology. I aspire to continue growing to become a great Software Developer. I am still actively pursuing a Bachelor in Health Science since I am reaching the end of my studies.. As of now, I have finished Python WebFundementals Full Stack, and I am currently diving into the Java Stack to get a well-rounded education that will prepare me for my continued growth in software development. </p>
+            <p>I am currently an Advanced Emergency Medical Technician working every day to make a difference. I want to pursuing other challanges and that is why I am seaking career in Information Technology. I aspire to continue growing to become a great Software Developer. I am still actively pursuing a Bachelor in Health Science since I am reaching the end of my studies. As of now, I have finished Python WebFundementals Full Stack, and I am currently diving into the Java Stack to get a well-rounded education that will prepare me for my continued growth in software development. </p>
         </div>
         <h1 class="text-primary text-info">Work Experience</h1>
         <div class="p-3 border border-dark">
