--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
         </div>
         <h1 class="text-primary text-info">About Me</h1>
         <div class="p-3 border border-dark mb-4">
-            <p>I am currently an Advanced Emergency Medical Technician working every day to make a difference. I want to pursuing other challanges and that is why I am seaking career in Information Technology. I aspire to continue growing to become a great Software Developer. I am still actively pursuing a Bachelor in Health Science since I am reaching the end of my studies. As of now, I have finished Python WebFundementals Full Stack, and I am currently diving into the Java Stack to get a well-rounded education that will prepare me for my continued growth in software development. </p>
+            <p>I am currently an Advanced Emergency Medical Technician working every day to make a difference. I want to pursuing other challanges and that is why I am seeking career in Information Technology. I aspire to continue growing to become a great Software Developer. I am still actively pursuing a Bachelor in Health Science since I am reaching the end of my studies. As of now, I have finished my Python WebFundementals Full Stack, and I am currently diving into the Java Stack to get a well-rounded education that will prepare me for my continued growth in software development. </p>
         </div>
         <h1 class="text-primary text-info">Work Experience</h1>
         <div class="p-3 border border-dark">
@@ -164,13 +164,13 @@
             <p class="mb-0"> September 2021 - Present</p>
             <ul>
                 <li>Activly enganging with the public while responding to 911 calls.</li>
-                <li>Providing emergency medical care within high sress environments.</li>
+                <li>Providing emergency medical care within high stress environments.</li>
             </ul>
             <h5>Collierville Fire Department | Advanced EMT/Firefighter</h5>
             <p class="mb-0"> August 2019 - September 2021</p>
             <ul>
                 <li>Activly engaging with the public while responding to 911 calls through the Collierville Fire Department.</li>
-                <li>Providing emergency medical care and incident response within high sress environments.</li>
+                <li>Providing emergency medical care and incident response within high stress environments.</li>
             </ul>
             <h5>Emergency Mobile Health Care | EMT</h5>
             <p class="mb-0"> January 2018 - August 2019</p>
