--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <p> HTML, CSS, JavaScript, Python, MySQL, Flask, Django, Ajax, Java  |  English </p>
                     <a href="https://docs.google.com/document/d/1lwJV-s7RnxBR0LowzLjRMItuAfrgGmbcfVgD5bMjqeE/edit?usp=sharing" target="_blank"><button type="button" class="btn btn-outline-info">Resume <i class="fas fa-file"></i></button></a> 
                     <button onclick="window.location.href='https://www.linkedin.com/in/brayden-rachel/'" type="button" class="btn btn-outline-info">LinkedIn <i class="fab fa-linkedin"></i></button> 
-                    <a href="https://github.com/BraydenRachel" target="_blank"><button type="button" class="btn btn-outline-info">GitHub <i class="fas fa-file"></i></button></a>
+                    <a href="https://github.com/BraydenRachel" target="_blank"><button type="button" class="btn btn-outline-info">GitHub <i class="fab fa-github"></i></button></a>
                 </div>
 
             </div>
