--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
                     <p class="lead">Coding Dojo Student and Advanced Emergency Medical Technician</p>
                     <hr class="my-4">
                     <p>Email: braydenrachel@gmail.com</p>
-                    <p>Languages: </p>
+                    <a href="mailto:braydenrachel@gmail.com"</a>
+                    <p>Languages and tech: </p>
                     <p> HTML, CSS, JavaScript, Python, MySQL, Flask, Django, Ajax, Java  |  English </p>
                     <a href="https://docs.google.com/document/d/1lwJV-s7RnxBR0LowzLjRMItuAfrgGmbcfVgD5bMjqeE/edit?usp=sharing" target="_blank"><button type="button" class="btn btn-outline-info">Resume <i class="fas fa-file"></i></button></a> 
                     <button onclick="window.location.href='https://www.linkedin.com/in/brayden-rachel/'" type="button" class="btn btn-outline-info">LinkedIn <i class="fab fa-linkedin"></i></button> 
