--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </div>
                 <div class="col-lg-9 col-sm-12">
                     <h1 class="display-4">Brayden Rachel</h1>
-                    <p class="lead">Coding Dojo Student and Advanced Emergency Medical Technician</p>
+                    <p class="lead">Coding Dojo Graduate and Advanced Emergency Medical Technician</p>
                     <hr class="my-4">
                     <p>Email: braydenrachel@gmail.com</p>
                     <p>Languages and tech: </p>
@@ -51,9 +51,9 @@
             <div class="card border border-dark">
 
                 <div class="card-body">
-                    <h5 class="card-title">Custom Portfolio</h5>
-                    <h6 class="card-title">HTML Static Sight</h6>
-                    <p class="card-text">This was an independent project to create a custom portfolio of my design</p>
+                    <h5 class="card-title">Book Broker</h5>
+                    <h6 class="card-title">Java Spring Boot Application</h6>
+                    <p class="card-text">This was an independent project to create a Multi Webpage Application that allows users to register and login to create reviews on books that the user has read and also allows for other users to check those books out from the database to read them aswell!</p>
                     <ul class="card-text">
                         <li>Hosted Webpage for visual example only. Github pages can only run static pages. To view full functionally of pages visit my code directory:</li>
                         <a  class="text-info" href="https://braydenrachel.github.io/Profile-Page--08-16-2021/"
