--- a/index.html
+++ b/index.html
@@ -55,16 +55,12 @@
                     <h6 class="card-title">Java Spring Boot Application</h6>
                     <p class="card-text">This was an independent project to create a Multi Webpage Application that allows users to register and login to create reviews on books that the user has read and also allows for other users to check those books out from the database to read them aswell!</p>
                     <ul class="card-text">
-                        <li>Hosted Webpage for visual example only. Github pages can only run static pages. To view full functionally of pages visit my code directory:</li>
-                        <a  class="text-info" href="https://braydenrachel.github.io/Profile-Page--08-16-2021/"
-                        target="_blank">https://braydenrachel.github.io/Profile-Page--08-16-2021/</a>
-                        <li>Code sample in relevant directory:
-                            <a class="text-info" href="https://github.com/BraydenRachel/Profile-Page--08-16-2021"
-                                target="_blank">https://github.com/BraydenRachel/Profile-Page--08-16-2021</a>
-                        </li>
+                        <li>Hosted Webpage:</li>
+                        <a  class="text-info" href="https://github.com/BraydenRachel/Book_Broker"
+                        target="_blank">https://github.com/BraydenRachel/Book_Broker</a>
                     </ul>
                     <small class="text-muted">
-                        July 2021
+                        February 2022
                     </small>
                 </div>
             </div>
@@ -156,7 +152,7 @@
         </div>
         <h1 class="text-primary text-info">About Me</h1>
         <div class="p-3 border border-dark mb-4">
-            <p>I am currently an Advanced Emergency Medical Technician working every day to make a difference. I want to pursuing other challanges and that is why I am seeking career in Information Technology. I aspire to continue growing to become a great Software Developer. I am still actively pursuing a Bachelor in Health Science since I am reaching the end of my studies. As of now, I have finished my Python WebFundementals Full Stack, and I am currently diving into the Java Stack to get a well-rounded education that will prepare me for my continued growth in software development. </p>
+            <p>I am currently an Advanced Emergency Medical Technician working every day to make a difference. I want to pursuing other challanges and that is why I am seeking career in Information Technology. I aspire to continue growing to become a great Software Developer. I am still actively pursuing a Bachelor in Health Science since I am reaching the end of my studies. As of now, I have just finished all my studies within Coding Dojo including Web Fundementals, Python, and Java. I have enjoyed ever minute of Coding Dojo and look forward to pursing further studies within software developing in the future. </p>
         </div>
         <h1 class="text-primary text-info">Work Experience</h1>
         <div class="p-3 border border-dark">
